# eleicoes-paudalho-2024-api

./: .dockerignore  .gitignore  Dockerfile  celery_app.py  docker-compose.yml  pyproject.toml  supervisord.conf  test.script.py
app/: main.py
app/core/: database.py  settings.py
