[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Hylan Silva <hylansilva@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pymongo = "4.9"
celery = {extras = ["redis"], version = "^5.4.0"}
requests = "^2.32.3"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
nest-asyncio = "^1.6.0"
motor = "3.6.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
taskipy = "^1.13.0"


[tool.taskipy.tasks]
dev = "fastapi dev app/main.py"
run = "fastapi run app/main.py"
test = "pytest tests"
celery-worker = "celery -A celery_app worker --loglevel=info"
celery-beat = "celery -A celery_app beat --loglevel=info"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
